[project]
name = "sonargnn"
version = "0.1.0"
description = "A Graph Convolutional Network (GCN) for detecting illicit transactions in Web3 networks"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CDS525 Group" }
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torch_geometric>=2.3.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
